2023-02-25  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha03: Blizzard';git push
	git tag -a 5.1.5-alpha03 -m '';git push --tags

	* Thwart attempts to remove directories that are not NCZarr objects

2023-02-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.5-alpha02: Champignons';git push
	git tag -a 5.1.5-alpha02 -m 'all: EAMxx CF, ncks bnr_wrt fix; ncrcat: no_cll_mth, ncremap var_lst zmid';git push --tags

2023-02-23  Charlie Zender  <zender@uci.edu>

	* ncremap acquire timeMonthly_avg_zMid iff necessary for vertical interpolation

	* Infer CF-compliance from if global attribute Conventions contains "None yet" (currently true for SCREAMv1/EAMxx output)

2023-02-22  Charlie Zender  <zender@uci.edu>

	* ncremap re-enable plev_nm_out options, default to plev not lev for nco_vrt_grd_prs

2023-02-20  Charlie Zender  <zender@uci.edu>

	* Change implementation of FORCE_APPEND, FORCE_OVERWRITE from toggle to absolute

2023-02-19  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo WARNING and ERROR when user specifies output directory beginning with dash

2023-02-16  Charlie Zender  <zender@uci.edu>

	* nco_bnr_wrt() change wrt_bnr from C-type long to C-type size_t for UNIX/Windows consistency

	* nco_bnr_wrt() use unsigned long long pointers (not unsigned long pointers) for eight-byte words

	* nco_fl_nm_vld_ncz_syn() caveat that WARNING about missing fragment only applies to NCZarr objects

2023-02-15  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo use NERSC-compiled module since Cori now missing Intel library used by personal executables

2023-02-12  Charlie Zender  <zender@uci.edu>

	* Updated ChangeLog with earliest (1995) announcements of NCO availability

	* Successfully build and test with netCDF 4.9.1-final

2023-01-19  Charlie Zender  <zender@uci.edu>
